linked math library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(tira)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_SOURCE_DIR src)
 set(CMAKE_GENERATOR "Unix Makefiles" CACHE INTERNAL "" FORCE)
+set(CMAKE_BUILD_TYPE Debug)
 find_package(CxxTest)
 if(CXXTEST_FOUND)
   include_directories(${CXXTEST_INCLUDE_DIR})
@@ -16,3 +17,4 @@ endif(CXXTEST_FOUND)
 
 add_executable(tira src/main.cpp src/huffman.cpp src/tree.cpp src/heap.cpp)
 target_include_directories(tira PRIVATE headers)
+target_link_libraries(tira PRIVATE m)
