moved to catch2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,12 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_SOURCE_DIR src)
 set(CMAKE_GENERATOR "Unix Makefiles" CACHE INTERNAL "" FORCE)
 set(CMAKE_BUILD_TYPE Debug)
-find_package(CxxTest)
-if(CXXTEST_FOUND)
-  include_directories(${CXXTEST_INCLUDE_DIR})
-  enable_testing()
-  CXXTEST_ADD_TEST(unittest_heap heaptest.cpp
-    ${PROJECT_SOURCE_DIR}/src/heap.cpp ${PROJECT_SOURCE_DIR}/headers/tests/HeapTest.h)
-endif(CXXTEST_FOUND)
-
+find_package(Catch2 REQUIRED)
+add_executable(tests src/tests/HeapTest.cpp src/heap.cpp)
 add_executable(tira src/main.cpp src/huffman.cpp src/tree.cpp src/heap.cpp)
+
 target_include_directories(tira PRIVATE headers)
+target_include_directories(tests PRIVATE headers)
 target_link_libraries(tira PRIVATE m)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
+
