fixed most of the bugs in the encoding of a file to huffman coding
There's still a couple of bugs which means that the file won't be compressed correctly though

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
 
-find_package(Catch2 REQUIRED)
+find_package(Catch2)
+
 include(CTest)
 enable_testing()
 
@@ -22,16 +23,23 @@ source_group("Source files" FILES
   src/heap.cpp
   )
 
-add_executable(${PROJECT_TEST_NAME}
-  src/tests/HeapTest.cpp
-  src/heap.cpp
-  src/bitstring.cpp
-  )
+if (TARGET Catch2::Catch2)
+  add_executable(${PROJECT_TEST_NAME}
+    src/tests/HeapTest.cpp
+    src/heap.cpp
+    src/bitstring.cpp
+    )
 
-target_link_libraries(${PROJECT_TEST_NAME} PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(${PROJECT_TEST_NAME} PRIVATE gcov)
-target_include_directories(${PROJECT_TEST_NAME} PRIVATE headers)
-add_test(NAME ${PROJECT_TEST_NAME} COMMAND ${PROJECT_TEST_NAME})
+  target_compile_options(${PROJECT_TEST_NAME} PRIVATE -Wall -Wextra -Wunreachable-code -Wpedantic -fsanitize=address -fno-omit-frame-pointer)
+  target_link_options(${PROJECT_TEST_NAME} PRIVATE -fsanitize=address -fno-omit-frame-pointer)
+
+  target_link_libraries(${PROJECT_TEST_NAME} PRIVATE Catch2::Catch2WithMain)
+  target_link_libraries(${PROJECT_TEST_NAME} PRIVATE gcov)
+
+  target_include_directories(${PROJECT_TEST_NAME} PRIVATE headers)
+  add_test(NAME ${PROJECT_TEST_NAME} COMMAND ${PROJECT_TEST_NAME})
+endif()
+
 
 add_executable(tira
   src/main.cpp
@@ -41,14 +49,14 @@ add_executable(tira
   )
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|AppleClang|GNU")
-  target_compile_options(tira PRIVATE -Wall -Wextra -Wunreachable-code -Wpedantic -fsanitize=address -fno-omit-frame-pointer)
-  target_link_options(tira PRIVATE -fsanitize=address -fno-omit-frame-pointer)
+  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wunreachable-code -Wpedantic -fsanitize=address -fno-omit-frame-pointer)
+  target_link_options(${PROJECT_NAME} PRIVATE -fsanitize=address -fno-omit-frame-pointer)
 endif()
 if ( CMAKE_CXX_COMPILER_ID MATCHES "Clang" )
-  target_compile_options( vector-test PRIVATE -Wweak-vtables -Wexit-time-destructors -Wglobal-constructors -Wmissing-noreturn )
+  target_compile_options(${PROJECT_NAME} PRIVATE -Wweak-vtables -Wexit-time-destructors -Wglobal-constructors -Wmissing-noreturn )
 endif()
 if ( CMAKE_CXX_COMPILER_ID MATCHES "MSVC" )
-  target_compile_options( vector-test PRIVATE /W4 /w44265 /w44061 /w44062 )
+  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /w44265 /w44061 /w44062 )
 endif()
 
 
