--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ add_executable(tira
   )
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|AppleClang|GNU")
-  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wunreachable-code -Wpedantic -fsanitize=address -fno-omit-frame-pointer)
+  target_compile_options(${PROJECT_NAME} PRIVATE -Wshift-count-overflow -Wall -Wextra -Wunreachable-code -Wpedantic -fsanitize=address -fno-omit-frame-pointer)
   target_link_options(${PROJECT_NAME} PRIVATE -fsanitize=address -fno-omit-frame-pointer)
 endif()
 if ( CMAKE_CXX_COMPILER_ID MATCHES "Clang" )
